styling client side changed

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,16 @@
               will answer you. You can also ask him to general questions.
             </p>
             <button class="button" id="start">Get started</button>
+            <div class="loveContainer">
+              <p>
+                Developed with ❤️ by
+                <span>
+                  <a class="love" href="https://github.com/Sonnysam"
+                    >Samuel Agbenyo</a
+                  ></span
+                >
+              </p>
+            </div>
           </div>
         </div>
       </div>
