--- a/client/index.html
+++ b/client/index.html
@@ -26,8 +26,7 @@
             </h2>
             <p class="popup__text">
               Sonnybot is a chatbot that helps you to learn and practice
-              programming. You can ask him questions about programming and he
-              will answer you. You can also ask him to general questions.
+              programming. It can provide answers to both programming questions or challenges and general knowledge questions
             </p>
             <button class="button" id="start">Get started</button>
             <div class="loveContainer">
