href of anchor tag modified

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,8 @@
               <p>
                 Developed with ❤️ by
                 <span>
-                  <a class="love" href="https://github.com/Sonnysam"
+                  <!-- <a class="love" href="https://github.com/Sonnysam" -->
+                  <a class="love" href="https://sonnytech-academy.vercel.app/"
                     >Samuel Agbenyo</a
                   ></span
                 >
